Fix static file path handling for production
Create new `static-root` directory outside of `siteapp`
into which to collect static files.

Update `environment.json` in `local-example` to use new
`static_root` directory.

Remove bad path reference to select2 javascript libraries
in component library page that was causing a static file crash
in production deloyments.

Add check and raise ValidationError if `STATIC_ROOT` set to `siteapp/static`.

Uncollected static files that ship with GovReady are located in `siteapp/static`.
In development (e.g. debug = false), Django will *ignore* the STATIC_ROOT setting and
search installed application paths when resolving STATIC_URL to find actual files.

In production (e.g. debug = true), Django will use the STATIC_ROOT setting
when resolving STATIC_URL to find the path to actual files.
Also, the `manage.py collectstatic` will copy found static files into the
STATIC_ROOT path.

A duplication of files can occur in production deployments when SITE_ROOT
is defined as `siteapp/static`. Collectstatic does post-processing on files and
appends a hash and then builds a manifest for static files. As `collectstatic` command
repeatedly is run, the result is reading and aggregating static files from and into
the same directory. This will eventually cause an errors as file names grow too long
and the static file manifest and actual file names break.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ __pycache__/
 siteapp/static/vendor
 siteapp/static
 apps/
+static_root/*
+!static_root/README.md
 
 # generated files
 .bash_history
