Added file upload validation; added upload file tests; (#1082, #1058, #1057)

--- a/requirements.in
+++ b/requirements.in
@@ -20,7 +20,7 @@ xxhash # BSD License
 importlib-metadata>=1.7.0,>=0.12 # Apache License
 importlib-resources<2,>=1.0 # Apache License
 jsonschema # MIT License
-
+filetype # MIT License
 # Common Django Packages
 # Django==2.2.12 # BSD License
 Django==3.0.11 # BSD License
@@ -32,6 +32,7 @@ jsonfield # MIT License
 dj_database_url # BSD License
 whitenoise # MIT License
 django-guardian # MIT License
+pyinstrument # BSD License
 
 # Python Packages Developed by GovReady and/or Josh
 rtyaml # CC0
