--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,11 @@ jobs:
     - run: coverage run --source='.' --branch -p manage.py test guidedmodules
     - run: coverage run --source='.' --branch -p manage.py test siteapp
     - run: coverage run --source='.' --branch -p manage.py test system_settings
+    - run:
+          name: Run python tests using test splitting
+          command: |
+            TESTFILES=$(circleci tests glob "test/**/*.py" | circleci tests split)
+            ./manage.py test $TESTFILES -v 2
     # - run: coverage run --source='.' --branch -p manage.py test discussion
     # Commenting out tests until better solution for testing after page loaded
     #- run: coverage run --source='.' --branch -p manage.py test siteapp.tests.LandingSiteFunctionalTests
