--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,11 +72,11 @@ jobs:
     # Run unit and functional tests with code coverage, and store code coverage
     # results. CircleCI commands can't go on forever, so we run the tests
     # separately (with -p) and then combine code coverage results.
-    - run: coverage run --source='.' --branch -p manage.py test controls
-    - run: coverage run --source='.' --branch -p manage.py test discussion
-    - run: coverage run --source='.' --branch -p manage.py test guidedmodules
-    - run: coverage run --source='.' --branch -p manage.py test siteapp
-    - run: coverage run --source='.' --branch -p manage.py test system_settings
+#    - run: coverage run --source='.' --branch -p manage.py test controls
+#    - run: coverage run --source='.' --branch -p manage.py test discussion
+#    - run: coverage run --source='.' --branch -p manage.py test guidedmodules
+#    - run: coverage run --source='.' --branch -p manage.py test siteapp
+#    - run: coverage run --source='.' --branch -p manage.py test system_settings
     - run:
           name: Run python tests using test splitting
           command: |
