--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,24 +72,30 @@ jobs:
     # Run unit and functional tests with code coverage, and store code coverage
     # results. CircleCI commands can't go on forever, so we run the tests
     # separately (with -p) and then combine code coverage results.
+
     - run: coverage run --source='.' --branch -p manage.py test controls
-      - command: |
+        name: Run python tests using test splitting
+        command: |
           echo "I am result of above failed job in controls"
-          when: on_fail
+        when: on_fail
     - run: coverage run --source='.' --branch -p manage.py test discussion
-      - command: |
+        name: Run python tests using test splitting
+        command: |
           echo "I am result of above failed job in discussion"
-          when: on_fail
+        when: on_fail
     - run: coverage run --source='.' --branch -p manage.py test guidedmodules
-      - command: |
+        name: Run python tests using test splitting
+        command: |
           echo "I am result of above failed job in guidedmodules"
-          when: on_fail
+        when: on_fail
     - run: coverage run --source='.' --branch -p manage.py test siteapp
-      - command: |
+        name: Run python tests using test splitting
+        command: |
           echo "I am result of above failed job in siteapp"
-          when: on_fail
+        when: on_fail
     - run: coverage run --source='.' --branch -p manage.py test system_settings
-      - command: |
+        name: Run python tests using test splitting
+        command: |
           echo "I am result of above failed job in system_settings"
         when: on_fail
 #    - run:
