--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,10 +68,8 @@ jobs:
     # B110: try_except_pass
     # B603: subprocess_without_shell_equals_true
     - run: bandit -s B101,B110,B603 -r discussion/ guidedmodules/ siteapp/
-    test:
-      - parallelism: 4
-
-      # Run unit and functional tests with code coverage, and store code coverage
+      parallelism: 4
+    # Run unit and functional tests with code coverage, and store code coverage
     # results. CircleCI commands can't go on forever, so we run the tests
     # separately (with -p) and then combine code coverage results.
 #    - run: coverage run --source='.' --branch -p manage.py test controls
@@ -79,12 +77,11 @@ jobs:
 #    - run: coverage run --source='.' --branch -p manage.py test guidedmodules
 #    - run: coverage run --source='.' --branch -p manage.py test siteapp
 #    - run: coverage run --source='.' --branch -p manage.py test system_settings
-      - run:
+    - run:
           name: Run python tests using test splitting
           command: |
             TESTFILES=$(circleci tests glob "test/**/*.py" | circleci tests split)
             ./manage.py test $TESTFILES -v 2
-          when: on_fail
     # - run: coverage run --source='.' --branch -p manage.py test discussion
     # Commenting out tests until better solution for testing after page loaded
     #- run: coverage run --source='.' --branch -p manage.py test siteapp.tests.LandingSiteFunctionalTests
