--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,11 +78,30 @@ jobs:
 #    - run: coverage run --source='.' --branch -p manage.py test siteapp
 #    - run: coverage run --source='.' --branch -p manage.py test system_settings
     - run:
-          name: Run python tests using test splitting
+          name: Run python tests using test splitting controls
           command: |
             TESTFILES=$(circleci tests glob "test/**/*.py" | circleci tests split)
-            ./manage.py test $TESTFILES -v 2
-          parallelism: 4
+            ./manage.py test controls $TESTFILES -v 2
+    - run:
+        name: Run python tests using test splitting discussion
+        command: |
+          TESTFILES=$(circleci tests glob "test/**/*.py" | circleci tests split)
+          ./manage.py test discussion $TESTFILES -v 2
+    - run:
+          name: Run python tests using test splitting guidedmodules
+          command: |
+            TESTFILES=$(circleci tests glob "test/**/*.py" | circleci tests split)
+            ./manage.py test guidedmodules $TESTFILES -v 2
+    - run:
+        name: Run python tests using test splitting siteapp
+        command: |
+          TESTFILES=$(circleci tests glob "test/**/*.py" | circleci tests split)
+          ./manage.py test siteapp $TESTFILES -v 2
+    - run:
+        name: Run python tests using test splitting system_settings
+        command: |
+          TESTFILES=$(circleci tests glob "test/**/*.py" | circleci tests split)
+          ./manage.py test system_settings $TESTFILES -v 2
     # - run: coverage run --source='.' --branch -p manage.py test discussion
     # Commenting out tests until better solution for testing after page loaded
     #- run: coverage run --source='.' --branch -p manage.py test siteapp.tests.LandingSiteFunctionalTests
