no -p and store_test_results note if you do not use store_test_results, there will be no timing data available for splitting your tests.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,7 +110,7 @@ jobs:
        command: |
          echo $(circleci tests glob "controls/**/*" "discussion/**/*")
          TESTFILES=$(circleci tests glob "controls/**/*" "discussion/**/*"| circleci tests split --split-by=timings)
-         coverage run --source='.' --branch -p manage.py test $TESTFILES -v 2
+         coverage run --source='.' --branch manage.py test $TESTFILES -v 2
 
     # - run: coverage run --source='.' --branch -p manage.py test discussion
     # Commenting out tests until better solution for testing after page loaded
@@ -125,3 +125,6 @@ jobs:
         path: coverage.xml
     - store_artifacts:
         path: htmlcov
+      # Upload test results
+    - store_test_results:
+        path: test-reports
