--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,12 +105,12 @@ jobs:
 #        command: |
 #          TESTFILES=$(circleci tests glob "test/**/*.py" | circleci tests split)
 #            coverage run --source='.' --branch -p manage.py test system_settings $TESTFILES -v 2
-    - run:
+  - run:
        name: All tests run in split
        command: |
          echo $(circleci tests glob "controls/**/*" "discussion/**/*")
-         TESTFILES=$(circleci tests glob "controls/**/*" "discussion/**/*"| circleci tests split --split-by=timings)
-         coverage run --source='.' --branch manage.py test $TESTFILES -v 2
+         TESTFILES=$(circleci tests glob "test/**/*.py" | circleci tests split --split-by=timings)
+         coverage run --source='.' --branch -p manage.py test $TESTFILES -v 2
 
     # - run: coverage run --source='.' --branch -p manage.py test discussion
     # Commenting out tests until better solution for testing after page loaded
@@ -127,4 +127,4 @@ jobs:
         path: htmlcov
       # Upload test results
     - store_test_results:
-        path: test-reports
+        path: /tmp/test-reports
