--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,10 +105,10 @@ jobs:
 #        command: |
 #          TESTFILES=$(circleci tests glob "test/**/*.py" | circleci tests split)
 #            coverage run --source='.' --branch -p manage.py test system_settings $TESTFILES -v 2
-   - run:
+    - run:
        name: All tests run in split
        command: |
-         echo $(circleci tests glob "controls/**/*" "discussion/**/*")
+         echo $(circleci tests glob "test/**/*.py")
          TESTFILES=$(circleci tests glob "test/**/*.py" | circleci tests split --split-by=timings)
          coverage run --source='.' --branch -p manage.py test $TESTFILES -v 2
 
