--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,6 +108,7 @@ jobs:
     - run:
        name: All tests run in split
        command: |
+         mkdir test-results
          echo $(circleci tests glob "test/**/*.py")
          TESTFILES=$(circleci tests glob "test/**/*.py" | circleci tests split --split-by=timings)
          coverage run --source='.' --branch -p manage.py test $TESTFILES -v 2
@@ -127,4 +128,4 @@ jobs:
         path: htmlcov
       # Upload test results
     - store_test_results:
-        path: coverage.xml
+        path: test-results
