--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,7 @@ jobs:
     # B110: try_except_pass
     # B603: subprocess_without_shell_equals_true
     - run: bandit -s B101,B110,B603 -r discussion/ guidedmodules/ siteapp/
+    - run: mkdir test-results
 
     # Run unit and functional tests with code coverage, and store code coverage
     # results. CircleCI commands can't go on forever, so we run the tests
@@ -108,7 +109,6 @@ jobs:
     - run:
        name: All tests run in split
        command: |
-         mkdir test-results
          echo $(circleci tests glob "test/**/*.py")
          TESTFILES=$(circleci tests glob "test/**/*.py" | circleci tests split --split-by=timings)
          coverage run --source='.' --branch -p manage.py test $TESTFILES -v 2
