mkdir with sudo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,8 +71,10 @@ jobs:
     # B110: try_except_pass
     # B603: subprocess_without_shell_equals_true
     - run: bandit -s B101,B110,B603 -r discussion/ guidedmodules/ siteapp/
-    - run: mkdir test-results
-
+    - run:
+        name: Create test results folder
+        command: |
+          sudo mkdir -m 0755 -p  mkdir test-results
     # Run unit and functional tests with code coverage, and store code coverage
     # results. CircleCI commands can't go on forever, so we run the tests
     # separately (with -p) and then combine code coverage results.
