Test metadata is not automatically collected in CircleCI 2.0 until you enable the JUnit formatters. Django should be configured using the django-nose test runner.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,10 +71,7 @@ jobs:
     # B110: try_except_pass
     # B603: subprocess_without_shell_equals_true
     - run: bandit -s B101,B110,B603 -r discussion/ guidedmodules/ siteapp/
-    - run:
-        name: Create test results folder
-        command: |
-          sudo mkdir -m 0755 -p /tmp/test-results
+
     # Run unit and functional tests with code coverage, and store code coverage
     # results. CircleCI commands can't go on forever, so we run the tests
     # separately (with -p) and then combine code coverage results.
@@ -130,4 +127,4 @@ jobs:
         path: htmlcov
       # Upload test results
     - store_test_results:
-        path: /tmp/test-results
+        path: test-results
