--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     docker:
     - image: circleci/python:3.8.1-browsers # when upgrading, check that it works with selenium
-
+    parallelism: 4
     steps:
     # Add .local/bin to PATH for utilities install by `pip install --user`.
     - run: echo 'export PATH=~/.local/bin:$PATH' >> $BASH_ENV
@@ -80,7 +80,7 @@ jobs:
     - run:
         name: All tests run in split
         command: |
-          TESTFILES=$(circleci tests glob "test/**/*.py" | circleci tests split --split-by=timings)
+          TESTFILES=$(circleci tests glob "test/**/*.py" | circleci tests split --split-by=timings --timings-type=filename)
           echo "Here are all the test files"
           echo $TESTFILES
           coverage run --source='.' --branch -p manage.py test  --verbosity=2 $TESTFILES -v 2
