--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,9 +81,7 @@ jobs:
         name: All tests run in split
         command: |
           TESTFILES=$(circleci tests glob "test/**/*.py" | circleci tests split --split-by=timings --timings-type=filename)
-          echo "Here are all the test files"
-          echo $TESTFILES
-          coverage run --source='.' --branch -p manage.py test  --verbosity=2 $TESTFILES -v 2
+          coverage run --source controls,discussion,guidedmodules,siteapp,system_settings --branch -p manage.py test  --verbosity=2 $TESTFILES -v 2
     # - run: coverage run --source='.' --branch -p manage.py test discussion
     # Commenting out tests until better solution for testing after page loaded
     #- run: coverage run --source='.' --branch -p manage.py test siteapp.tests.LandingSiteFunctionalTests
