--- a/.pyup.yml
+++ b/.pyup.yml
@@ -1,8 +1,7 @@
-Update: all
-Search: True
-Pin: True
-Default Branch: develop
-Branch pre-fix: pyup-
-Close PRs: True
-Label PRs: False
-Update hashes: True
+update: all
+search: True
+pin: True
+branch: develop
+branch_prefix: pyup-
+close_prs: True
+label_prs: False
